# macrodata-refinement

./: cabal.project  macrodata-refinement.cabal
app/: Main.hs
